finished project. First test

--- a/source/form.html
+++ b/source/form.html
@@ -297,9 +297,7 @@
     </div>
   </section>
 
-  <script src="scripts/scripts.js"></script>
-  <script src="scripts/svgxuse.min.js"></script>
-  <script src="scripts/picturefill.js"></script>
+  <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
