--- a/source/photo.html
+++ b/source/photo.html
@@ -333,9 +333,7 @@
       </div>
     </div>
   </footer>
-  <script src="scripts/scripts.js"></script>
-  <script src="scripts/svgxuse.min.js" defer=""></script>
-  <script src="scripts/picturefill.js"></script>
+  <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
