--- a/source/index.html
+++ b/source/index.html
@@ -338,9 +338,7 @@
       </div>
     </div>
   </footer>
-  <script src="scripts/scripts.js"></script>
-  <script src="scripts/svgxuse.min.js"></script>
-  <script src="scripts/picturefill.js"></script>
+  <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
