--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Пинк</title>
+  <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" type="text/html" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -48,7 +50,8 @@
             <a class="nav__link is-active">Конкурс</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy</a>
+            <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener">HTML
+              Academy</a>
           </li>
         </ul>
       </nav>
