--- a/source/photo.html
+++ b/source/photo.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Пинк</title>
+  <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" type="text/html" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.min.css">
-
 </head>
 
 <body class="body">
@@ -48,7 +49,7 @@
             <a class="nav__link" href="form.html">Конкурс</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy</a>
+            <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -70,7 +71,7 @@
         <picture>
           <source media="(min-width: 1200px)" srcset="./img/panorama-desktop@1x.jpg 1x, ./img/panorama-desktop@2x.jpg 2x">
           <source media="(min-width: 660px)" srcset="./img/panorama-tablet@1x.jpg 1x, ./img/panorama-tablet@2x.jpg 2x">
-          <img class="image image_cover" src="./img/panorama-mobile@1x.jpg" srcset="./img/panorama-mobile@2x.jpg 2x" alt="Фото дня">
+          <img class="image image_cover" srcset="./img/panorama-mobile@1x.jpg, ./img/panorama-mobile@2x.jpg 2x" alt="Фото дня">
         </picture>
         <span class="photo__mark">Панорама дня</span>
       </a>
@@ -95,7 +96,7 @@
                 <picture>
                   <source media="(min-width: 1200px)" srcset="./img/photo-car-desktop@1x.jpg 1x, ./img/photo-car-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="./img/photo-car-tablet@1x.jpg 1x, ./img/photo-car-tablet@2x.jpg 2x">
-                  <img class="image" src="./img/photo-car-mobile@1x.jpg" srcset="./img/photo-car-mobile@2x.jpg 2x" alt="photo">
+                  <img class="image" srcset="./img/photo-car-mobile@1x.jpg, ./img/photo-car-mobile@2x.jpg 2x" alt="photo">
                 </picture>
               </a>
               <div class="photo__info">
@@ -118,7 +119,7 @@
                 <picture>
                   <source media="(min-width: 1200px)" srcset="./img/photo-drumset-desktop@1x.jpg 1x, ./img/photo-drumset-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="./img/photo-drumset-tablet@1x.jpg 1x, ./img/photo-drumset-tablet@2x.jpg 2x">
-                  <img class="image" src="./img/photo-drumset-mobile@1x.jpg" srcset="./img/photo-drumset-mobile@2x.jpg 2x" alt="photo">
+                  <img class="image" srcset="./img/photo-drumset-mobile@1x.jpg, ./img/photo-drumset-mobile@2x.jpg 2x" alt="photo">
                 </picture>
               </a>
               <div class="photo__info">
@@ -141,7 +142,7 @@
                 <picture>
                   <source media="(min-width: 1200px)" srcset="./img/photo-window-desktop@1x.jpg 1x, ./img/photo-window-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="./img/photo-window-tablet@1x.jpg 1x, ./img/photo-window-tablet@2x.jpg 2x">
-                  <img class="image" src="./img/photo-window-mobile@1x.jpg" srcset="./img/photo-window-mobile@2x.jpg 2x" alt="photo">
+                  <img class="image" srcset="./img/photo-window-mobile@1x.jpg, ./img/photo-window-mobile@2x.jpg 2x" alt="photo">
                 </picture>
               </a>
               <div class="photo__info">
@@ -165,7 +166,7 @@
                 <picture>
                   <source media="(min-width: 1200px)" srcset="./img/photo-fair-desktop@1x.jpg 1x, ./img/photo-fair-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="./img/photo-fair-tablet@1x.jpg 1x, ./img/photo-fair-tablet@2x.jpg 2x">
-                  <img class="image" src="./img/photo-fair-mobile@1x.jpg" srcset="./img/photo-fair-mobile@2x.jpg 2x" alt="photo">
+                  <img class="image" srcset="./img/photo-fair-mobile@1x.jpg, ./img/photo-fair-mobile@2x.jpg 2x" alt="photo">
                 </picture>
               </a>
               <div class="photo__info">
@@ -188,7 +189,7 @@
                 <picture>
                   <source media="(min-width: 1200px)" srcset="./img/photo-pov-desktop@1x.jpg 1x, ./img/photo-pov-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="./img/photo-pov-tablet@1x.jpg 1x, ./img/photo-pov-tablet@2x.jpg 2x">
-                  <img class="image" src="./img/photo-pov-mobile@1x.jpg" srcset="./img/photo-pov-mobile@2x.jpg 2x" alt="photo">
+                  <img class="image" srcset="./img/photo-pov-mobile@1x.jpg, ./img/photo-pov-mobile@2x.jpg 2x" alt="photo">
                 </picture>
               </a>
               <div class="photo__info">
@@ -211,7 +212,7 @@
                 <picture>
                   <source media="(min-width: 1200px)" srcset="./img/photo-wing-desktop@1x.jpg 1x, ./img/photo-wing-desktop@2x.jpg 2x">
                   <source media="(min-width: 660px)" srcset="./img/photo-wing-tablet@1x.jpg 1x, ./img/photo-wing-tablet@2x.jpg 2x">
-                  <img class="image" src="./img/photo-wing-mobile@1x.jpg" srcset="./img/photo-wing-mobile@2x.jpg 2x" alt="photo">
+                  <img class="image" srcset="./img/photo-wing-mobile@1x.jpg, ./img/photo-wing-mobile@2x.jpg 2x" alt="photo">
                 </picture>
               </a>
               <div class="photo__info">
@@ -240,7 +241,7 @@
             <picture>
               <source media="(min-width: 1200px)" srcset="./img/photo-road-desktop@1x.jpg 1x, ./img/photo-road-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="./img/photo-road-tablet@1x.jpg 1x, ./img/photo-road-tablet@2x.jpg 2x">
-              <img class="image" src="./img/photo-road-mobile@1x.jpg" srcset="./img/photo-road-mobile@2x.jpg 2x" alt="upload-img">
+              <img class="image" srcset="./img/photo-road-mobile@1x.jpg, ./img/photo-road-mobile@2x.jpg 2x" alt="upload-img">
             </picture>
           </div>
           <div class="filter__inner">
@@ -333,7 +334,7 @@
       </div>
     </div>
   </footer>
-  <script src="js/scripts.min.js"></script>
+  <script src="js/scripts.min.js" async></script>
 </body>
 
 </html>
